--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
 
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-           <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41" alt=""></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-                </ul>  
+                </ul>
+
             </div>          
         </div>
     </nav>
@@ -41,7 +42,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 mb-5 mb-sm-0 col-sm-3 text-center align-self-center">
+                    <img src="img/logo.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a type="button" class="btn btn-warning btn-block" id="reserveButton">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -55,36 +60,62 @@
               <li class="breadcrumb-item"><a href="./contactus.html">Contact</a></li>
             </ol>
         </nav>
-        <div class= "row row-content align-items-center">
+        <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-            </div>
+                <div class="d-flex">
+                    <img src="img/uthappizza.png" alt="Uthappizza"
+                      class="me-3 img-thumbnail align-self-center"/>
+                    <div>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <p class= "d-none d-sm-block"> A unique combination of Indian Uthappam (pancake) and 
+                            Italian pizza, topped with Cerignola olives, ripe vine 
+                            cherry tomatoes, Vidalia onion, Guntur chillies and 
+                            Buffalo Paneer.</p>
+                    </div>
+                  </div>
+            </div>  
         </div>
-
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="d-flex">
+                    <img src="img/buffet.png" alt="Alberto Somayya"
+                      class="me-3 img-thumbnail align-self-center"/>
+                    <div>
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class= "d-none d-sm-block">Featuring mouthwatering combinations with a choice of five 
+                            different salads, six enticing appetizers, six main entrees 
+                            and five choicest desserts. Free flowing bubbly 
+                            and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                  </div>
             </div>
         </div>
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
+                <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-            </div>
+                <div class="d-flex">
+                    <img src="img/alberto.png" alt="Alberto Somayya"
+                      class="me-3 img-thumbnail align-self-center"/>
+                    <div>
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                            International experience having worked closely with
+                            whos-who in the culinary world, he specializes in
+                            creating mouthwatering Indo-Italian fusion experiences.
+                        </p>
+                    </div>
+                  </div>
+            </div>  
         </div>
     </div>
 
