--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/3149c18db9.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
     <title>UR08 - Irecê</title>
 </head>
@@ -27,7 +26,6 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> Quem Somos?</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contato</a></li>
                 </ul>
             </div> 
             <button type="button" class="btn btn-primary">
@@ -213,7 +211,6 @@
             <ol class=" col-12 breadcrumb border bg-light p-2">
               <li class="breadcrumb-item active" aria-current="page">Início</li>
               <li class="breadcrumb-item"><a href="./aboutus.html">Quem Somos?</a></li>
-              <li class="breadcrumb-item"><a href="./contactus.html">Contato</a></li>
             </ol>
         </nav>
 
@@ -429,24 +426,53 @@
       <div class="row row-content justify-content-center">
             <h3>Projetos</h3>
             <hr>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="./img/cidade1.png" alt="Card image cap">
+            <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="card-img-top" src="./img/dest.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Cidade Empreendedora</h5>
+                  <h5 class="card-title">Destinos Turísticos Inteligentes <span class="badge bg-info"> Chapada</span><br></h5>
                   <a href="#" class="btn btn-primary">Informações >></a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem; height: 18rem;">
                 <img class="card-img-top" src="./img/agro1.png" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Agronordeste</h5>
-                  <a href="#" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#ModalAgro">Informações >></a>
+                  <h5 class="card-title">Agronordeste <span class="badge bg-secondary"> Irecê</span><br></h5>
+                  
+                  <a href="#" class="btn btn-primary "  data-bs-toggle="modal" data-bs-target="#ModalAgro">Informações >></a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card" style="width: 18rem; height: 18rem;">
                 <img class="card-img-top" src="./img/renova1.png" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Renova Varejo</h5>
+                  <h5 class="card-title">Renova Varejo <span class="badge bg-secondary"> Irecê</span></h5>
+                  <a href="#" class="btn btn-primary">Informações >></a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="card-img-top" src="./img/sebraerg.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Atendimento Regional <span class="badge bg-secondary"> Irecê</span></h5>
+                  <a href="#" class="btn btn-primary">Informações >></a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="card-img-top" src="./img/sebrae.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Saúde e Bem-Estar <br><span class="badge bg-secondary"> Irecê</span></h5>
+                  <a href="#" class="btn btn-primary">Informações >></a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="card-img-top" src="./img/cafe.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Cafés Especiais da Chapada Diamantina</h5>
+                  <a href="#" class="btn btn-primary">Informações >></a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem; height: 18rem;">
+                <img class="card-img-top" src="./img/agro1.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Agronordeste <span class="badge bg-info"> Chapada</span></h5>
                   <a href="#" class="btn btn-primary">Informações >></a>
                 </div>
               </div>
