--- a/aboutus.html
+++ b/aboutus.html
@@ -9,8 +9,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <script src="https://use.fontawesome.com/3149c18db9.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="css/styles.css" rel="stylesheet">
     <title>UR08 - Irecê</title>
 
@@ -27,7 +27,6 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> Quem Somos?</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contato</a></li>
                 </ul>  
             </div>          
         </div>
@@ -41,7 +40,6 @@
                 <ol class=" col-12 breadcrumb border bg-light p-2">
                   <li class="breadcrumb-item"><a href="./index.html">Início</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Quem Somos?</li>
-                  <li class="breadcrumb-item"><a href="./contactus.html">Contato</a></li>
                 </ol>
             </nav>
             <div class="col-12">
@@ -53,38 +51,17 @@
         <div class="row row-content">
             <div class="col-sm-6">
                 <h2>Nossa História</h2>
-                <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
-                <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
+                <p>A empresa Serviços de Apoio As Micro e Pequenas Empresas Do Estado Da Bahia de CNPJ 14.797.724/0014-37, fundada em 29/03/1993, está com a situação cadastral ativa na Receita Federal. Essa empresa é uma FILIAL do tipo Serviço Social Autônomo, de porte "DEMAIS" que está localizada em Irece - BA. Sua atividade econômica principal é Atividades de consultoria em gestão empresarial, exceto consultoria técnica específica.</p> 
             </div>
             <div class="col-sm">
                 <div class="card">
                     <h3 class="card-header bg-primary text-white"></h3>
                     <div class="card-body">
                         <dl class="row">
-                            <dt class="col-6">Started</dt>
-                            <dd class="col-6">3 Feb. 2013</dd>
-                            <dt class="col-6">Major Stake Holder</dt>
-                            <dd class="col-6">HK Fine Foods Inc.</dd>
-                            <dt class="col-6">Last Year's Turnover</dt>
-                            <dd class="col-6">$1,250,375</dd>
-                            <dt class="col-6">Employees</dt>
-                            <dd class="col-6">40</dd>
+                            <dt class="col-6">Fundação</dt>
+                            <dd class="col-6">29 Março. 1993</dd>
                         </dl>
                     </div>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="card card-body bg-light">
-                    <figure>
-                        <blockquote class="blockquote">
-                          <p>You better cut the pizza in four pieces because
-                            I'm not hungry enough to eat six.</p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Yogi Berra, <cite title="Source Title">The Wit and Wisdom of
-                                Yogi Berra, P. Pepe, Diversion Books, 2014</cite>
-                        </figcaption>
-                    </figure>
                 </div>
             </div>
         </div>
@@ -100,7 +77,7 @@
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    
 
 </body>
 
