--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -291,6 +293,27 @@
                         <img src="./img/Rosi.png" class="d-block w-100" alt="alt2">
                         <div class="carousel-caption d-none d-md-block">
                           <h4>Rosiane Aparecida Meire Cordeiro</h4>
+                          <h5>Analista Técnico</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/Heitor.png" class="d-block w-100" alt="alt2">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h4>Heitor Ferrari Marback</h4>
+                          <h5>Analista Técnico</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/michelle.png" class="d-block w-100" alt="alt2">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h4>Michelle Andrade Nonato dos Anjos Aguiar</h4>
+                          <h5>Analista Técnico</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./img/marcia.png" class="d-block w-100" alt="alt2">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h4>Márcia Serra de Souza</h4>
                           <h5>Analista Técnico</h5>
                         </div>
                       </div>
