--- a/index.html
+++ b/index.html
@@ -1282,11 +1282,11 @@
           </div>
           <div class="modal-body">
             <div class="col ">
-              <object style="width:1100px; height:400px;" data="pdf/AtendimentoRegionalIrece.pdf" type="application/pdf" internalinstanceid="9" title="">
+              <object style="width:1100px; height:600px;" data="pdf/AtendimentoRegionalIrece_.pdf" type="application/pdf" internalinstanceid="9" title="">
                 <p>
                    Navegador sem suporte para visualização de arquivo pdf.
                    Você pode baixar o arquivo 
-                   <a href="pdf/AtendimentoRegionalIrece.pdf">aqui</a>.
+                   <a href="pdf/AtendimentoRegionalIrece_.pdf">aqui</a>
                 </p>
              </object>
             </div>
@@ -1858,7 +1858,7 @@
                           </div>
                       </div>
                       <div class="carousel-item">
-                          <img class="d-block w-100" src="img/atendseabra2.pngPdf"
+                          <img class="d-block w-100" src="img/atendseabra2.png"
                               alt="Second slide">
                           <div class="carousel-caption d-none d-md-block">
                             <h5>Palestra Experiencialize</h5>
@@ -2129,11 +2129,11 @@
           </div>
           <div class="modal-body">
             <div class="col ">
-              <object style="width:1100px; height:600px;" data="pdf/EspeciaisdaChapadaDiamantina.pdf" type="application/pdf" internalinstanceid="9" title="">
+              <object style="width:1100px; height:600px;" data="pdf/CafesEspeciaisdaChapadaDiamantina_.pdf" type="application/pdf" internalinstanceid="9" title="">
                 <p>
                    Your browser isn't supporting embedded pdf files.
                    You can download the file
-                   <a href="pdf/EspeciaisdaChapadaDiamantina.pdf">here</a>.
+                   <a href="pdf/CafesEspeciaisdaChapadaDiamantina_.pdf">here</a>.
                 </p>
              </object>
             </div>
@@ -2358,11 +2358,11 @@
           </div>
           <div class="modal-body">
             <div class="col ">
-              <object style="width:1100px; height:400px;" data="pdf/AgronordesteChapada.pdf" type="application/pdf" internalinstanceid="9" title="">
+              <object style="width:1100px; height:600px;" data="pdf/AgronordesteChapadaDiamantina_.pdf" type="application/pdf" internalinstanceid="9" title="">
                 <p>
                    Navegador sem suporte para visualização de arquivo pdf.
                    Você pode baixar o arquivo 
-                   <a href="pdf/AgronordesteChapada.pdf">aqui</a>.
+                   <a href="pdf/AgronordesteChapadaDiamantina_.pdf">aqui</a>.
                 </p>
              </object>
             </div>
@@ -2818,6 +2818,7 @@
                                 <li class="list-group-item">JUSSIAPE</li>
                                 <li class="list-group-item">LENÇÓIS</li>
                                 <li class="list-group-item">MARCIONÍLIO SOUZA</li>
+                                <li class="list-group-item">MORRO DO CHAPÉU</li>
                                 <li class="list-group-item">MUCUGÊ</li>
                                 <li class="list-group-item">NOVA REDENÇÃO</li>
                                 <li class="list-group-item">NOVO HORIZONTE</li>
@@ -2834,7 +2835,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                            <h5>Irecê  <span class="badge bg-primary rounded-pill">22</span></h5>
+                            <h5>Irecê  <span class="badge bg-primary rounded-pill">20</span></h5>
                         </button>
                       </h2>
                       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
